# libshjpeg

./: AUTHORS  Android.mk  COPYING_MIT  ChangeLog  Makefile.am  README  configure.ac  libjpeg6_skipfix.patch  libshjpeg.txt
doc/: Makefile.am  libjpeg_multithread.1  libjpegtest.1  shjpeg_multithread.1
include/: Makefile.am
include/libjpeg_wrap/: Makefile.am  hooks.h
include/shjpeg/: shjpeg.h  shjpeg_types.h
m4/: libtool.m4
release_notes/: libshjpeg-1.3.0.txt  libshjpeg-1.3.1.txt  libshjpeg-1.3.2.txt  libshjpeg-1.3.3.txt  libshjpeg-1.3.4.txt  libshjpeg-1.3.5.txt  libshjpeg-1.3.6.txt  libshjpeg-1.3.7.txt
src/: Android.mk  Makefile.am  shjpeg_common.c  shjpeg_config.c  shjpeg_decode.c  shjpeg_encode.c  shjpeg_internal.h  shjpeg_jpu.c  shjpeg_jpu.h  shjpeg_regs.h  shjpeg_softhelper.c  shjpeg_softhelper.h  shjpeg_utils.h  shjpeg_veu.c  shjpeg_veu.h  shjpeg_vio.c  shjpeg_vio.h
src/libjpeg_wrap/: init.c  jpeg_io.c  jpeg_io.h  libmessage.h  override.c  override.h
src/libjpeg_wrap/hooks/: hooks.c
tests/: Makefile.am  libjpeg_test.c  libjpeg_thread.c  shjpeg_multithread.c  shjpegshow.c  shjpegtest.c  v2mjpeg.c
